Added most projects to table

--- a/index.html
+++ b/index.html
@@ -39,16 +39,80 @@
 				<th>Link</th>
 			</tr>
 			<tr>
-				<td>Selenium</td>
-				<td>Albert Garcia</td>
-				<td><a href="cp/AlbertGarcia/code.zip">Project Link</a></td>
+				<td>Map of the Gods</td>
+				<td>Nitya Davarapalli</td>
+				<td><a href="./projects/davarapallinitya_25842_2485458_enhancementproject-1.zip">Project Link</a></td>
 			</tr>
 			<tr>
-				<td>Scraping Reddit using PRAWS & VADER</td>
-				<td>Alexander Lue</td>
-				<td><a href="cp/AlexanderLue/code.zip">Code/Data</a></td>
+				<td>Business Calculators</td>
+				<td>Jacob Guyette</td>
+				<td><a href="./projects/guyettejacob_15276_2485576_BusinessCalculators-2.zip">Project Link</a></td>
 			</tr>
-			
+			<tr>
+				<td>California Wildfires</td>
+				<td>Peter Heidler</td>
+				<td><a href="./projects/heidlerpeter_24656_2476268_EnhancementProject.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>Airport Data</td>
+				<td>John Leckrone</td>
+				<td><a href="./projects/leckronejohn_20403_2474736_JohnLeckroneEnhancement.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>CA Immigration</td>
+				<td>Herbert Li</td>
+				<td><a href="./projects/liherbert_24456_2484540_asg12.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>CEO/Worker Pay Ratio</td>
+				<td>Gabriella Lindsey</td>
+				<td><a href="./projects/lindseygabriella_9950_2483462_Assignment_12_Gabriella_Lindsey-1.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>UCSC Classes</td>
+				<td>Sriya Lingampalli</td>
+				<td><a href="./projects/lingampallisriya_25102_2485838_A12_EnhancementProject_slingamp-1.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>Timeline Comparison</td>
+				<td>Saujanya Mulukutla</td>
+				<td><a href="./projects/mulukutlasaujanya_22973_2485312_TimelineComparison-master.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>Influential Women of 21st Century</td>
+				<td>Minh Anh Nguyen</td>
+				<td><a href="./projects/nguyenminhanh_6196_2476469_class_enhance-1.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>Seattle Census Tracts 2020</td>
+				<td>Neha Pamidi</td>
+				<td><a href="./projects/pamidineha_23014_2485005_enhancemet-project.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>Urban Sprawl in the U.S. and Increasing Air Pollution</td>
+				<td>Namratha Prithviraj</td>
+				<td><a href="./projects/prithvirajnamratha_26569_2485079_EnhancementProject-NamrathaPrithviraj.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>US Wage Gap</td>
+				<td>Siddharth Subramanian</td>
+				<td><a href="./projects/subramaniansiddharth_38749_2485620_EnhancementProjectComplete.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>World Migration</td>
+				<td>Ryan Sun</td>
+				<td><a href="./projects/sunryan_28475_2457492_migration-1.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>Comparing Delhi and Bangalore: Population and Literacy</td>
+				<td>Sonali Suri</td>
+				<td><a href="./projects/surisonali_42849_2479305_Final Submission-1.zip">Project Link</a></td>
+			</tr>
+			<tr>
+				<td>Rocket League Player Comparison</td>
+				<td>Alex Weiner</td>
+				<td><a href="./projects/weineralexander_30535_2484327_AlexWeinerEnhancement.zip">Project Link</a></td>
+			</tr>
 		</table>
     </div>
     
