--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<!-- Projects -->
 	<div class="example">
 		<h3>CSE 163 Enhancement Projects</h3>
-        <p>The enhancment projects associated are student-altered, professor-led visualizations in Spring 2020.</p>
+        <p>Most, but not all, enhancment projects are redesign of previous projects with significant improvements in consultation with Suresh K. Lodha.</p>
 		</br>
 		<table>
 			<col width="50%">
