--- a/projects/bhatia/restaurant.html
+++ b/projects/bhatia/restaurant.html
@@ -3,7 +3,8 @@
     <head>
         <link rel="stylesheet" type="text/css" href="restaurant.css">
         <script type="text/javascript" src='https://d3js.org/d3.v5.min.js'></script>
-        <h1 align="center">2019 Michelin Star Restaurants SF | LA | NY</h1>
+        <h1 align="center">Restaurant Guide for SF | LA | NY</h1>
+        <h3> using Michelin Stars </h3>
     </head>
     <!--add the d3 v5 script as well as the opening javascript-->
     <body>
@@ -17,7 +18,7 @@
         <svg id='viz'></svg>
 <!--        insert js and d3 script into code to create the node graph-->
         <script type="text/javascript" src="restaurant.js"></script>
-        <h4 style = "text-align:center">Created by: Manav Bhatia<br>In collaboration with: Professor Suresh Lodha CSE163<br><a href="https://github.com/manavrbhatia/CSE163FinalProject">Github Repo</a></h4>
+        <h4 style = "text-align:center">Created by: Manav Bhatia<br>In collaboration with Suresh Lodha<br><a href="https://github.com/manavrbhatia/CSE163FinalProject">Github Repo</a></h4>
          <div class="column">
                 <p><strong>Supported Interactions:</strong></p>
                 <p>Pan Drag and Zoom over Graph with mouse to move around</p>
