--- a/projects/cho/index.html
+++ b/projects/cho/index.html
@@ -9,7 +9,7 @@
     <!-- Meta Tag -->
     <meta charset="utf-8">
     <!-- Title Tag -->
-    <title>Food Radial Cluster Layout</title>
+    <title>Food Ingredients</title>
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">  
     <!-- D3.js Source -->
@@ -18,8 +18,8 @@
     <body style = "background-color: #f5f6f7">
     <!-- Title (with color) -->
 	<div style = "color:black; background-color: #f5f6f7">
-		<h4 style = "text-align:center; font-size:40px; margin-bottom: 10px; color:black; font-family: sans-serif">Enhancement Project</h4>
-		<h4 style = "text-align:center; font-size:23px; margin-top: 15px; color:black; font-family: sans-serif">-Food Radial Cluster Layout-</h4>
+		<!-<h4 style = "text-align:center; font-size:40px; margin-bottom: 10px; color:black; font-family: sans-serif">Enhancement Project</h4>-->
+		<h4 style = "text-align:center; font-size:23px; margin-top: 15px; color:black; font-family: sans-serif">Food Ingredients</h4>
 	</div>
 		<div id="tooltip" class="hidden">
 	    	<div class = "title"><span id="name">Test</span></div>
@@ -55,25 +55,25 @@
 		<script type="text/javascript" src="enhancement.js"></script> 
 		<div1 style = "color:black; background-color:#f5f6f7">
 			<div1>
-				<p style = "text-align:center; font-size: 30px; padding-top: 20px; font-family: sans-serif">Created by: <strong>Mingun Cho</strong></p>
-	  	  		<p style = "text-align:center; font-size: 20px; font-family: sans-serif">In collaboration with: <strong>Suresh Lodha</strong></p>
+				<!--<p style = "text-align:center; font-size: 30px; padding-top: 20px; font-family: sans-serif">Created by: <strong>Mingun Cho</strong></p>-->
+	  	  		<p style = "text-align:center; font-size: 20px; font-family: sans-serif">Designed and Created by Mingun Cho in collaboration with Suresh Lodha</strong></p>
 			</div1>
 		</div1>
 		<div class = "row" style = "padding-bottom: 50px">
-			<div class = "column" style = "text-align: center">
+			<!--<div class = "column" style = "text-align: center">
 				<p class = "head">Date:<br></p>
 				<p style = "font-size: 20px"><strong>Spring 2020</strong></p>
-			</div>
+			</div>-->
 			<div class = "column" style = "text-align: center">
-				<p class = "head">Files Submitted:<br></p>
-				<p style = "font-size: 20px">
-					<strong>index.html, stylesheet.css, enhancement.js, 
-					radial_food.data.csv, images(folder), Effort Document.pdf, Enhancement Presentation.pdf</strong>
+				<p class = "head">Files Submitted<br></p>
+				<p style = "font-size: 10px">
+					<!--<strong>-->index.html, stylesheet.css, enhancement.js, 
+					radial_food.data.csv, images(folder), Effort Document.pdf, Enhancement Presentation.pdf<!--</strong>-->
 				</p>
 			</div>
 			<div class = "column" style = "text-align: center">
-				<p class = "head">Code Resources:<br></p>
-				<p style = "font-size: 20px; line-height: 25px">
+				<p class = "head">Code Resources<br></p>
+				<p style = "font-size: 10px; line-height: 15px">
 					<a href="https://www.d3-graph-gallery.com/graph/dendrogram_basic.html"> Most basic dendrogram in d3.js</a><br>
 					<a href="https://bl.ocks.org/mbostock/4339607"> Radial Cluster Dendrogram by Mike Bostock</a><br>
 					<a href="https://bl.ocks.org/anonymous/bb5be85d509eb7824e95d193c4fb6d27/e87fb16f8058f85719647dde561bff12f998361a"> Radial Tidy Tree by Gerardo Furtado</a><br>
@@ -81,8 +81,8 @@
 				</p>
 			</div>
 			<div class = "column" style = "text-align: center">
-				<p class = "head">Data Resources:<br></p>
-				<p style = "font-size: 20px; line-height: 25px">
+				<p class = "head">Data Resources<br></p>
+				<p style = "font-size: 10px; line-height: 15px">
 					<a href="https://www.myrecipes.com/ingredients/types-of-beans"> 13 Common Types of Beans and How to Use Them</a><br>
 					<a href="https://www.halfyourplate.ca/fruits-and-veggies/fruits-a-z/"> Fruits From A-Z</a><br>
 					<a href="https://www.thespruceeats.com/types-of-clams-4067419"> Types of Clams</a><br>
@@ -90,7 +90,7 @@
 					<a href="https://fdc.nal.usda.gov/"> U.S. Department of Agriculture</a>
 				</p>
 			</div>
-			<div style = "text-align:center; font-size:20px">
+			<div style = "text-align:center; font-size:15px">
 				<a href="https://github.com/MangoShip/CSE163-Enhancement/"> Github Link</a>
 			</div>
 		</div>
