--- a/projects/bhatia/restaurant.html
+++ b/projects/bhatia/restaurant.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="restaurant.css">
         <script type="text/javascript" src='https://d3js.org/d3.v5.min.js'></script>
         <h1 align="center">Restaurant Guide for SF | LA | NY</h1>
-        <h3> using Michelin Stars </h3>
+        <h3 align="center"> using Michelin Stars </h3>
     </head>
     <!--add the d3 v5 script as well as the opening javascript-->
     <body>
