--- a/projects/cho/index.html
+++ b/projects/cho/index.html
@@ -18,7 +18,7 @@
     <body style = "background-color: #f5f6f7">
     <!-- Title (with color) -->
 	<div style = "color:black; background-color: #f5f6f7">
-		<!-<h4 style = "text-align:center; font-size:40px; margin-bottom: 10px; color:black; font-family: sans-serif">Enhancement Project</h4>-->
+		<!--<h4 style = "text-align:center; font-size:40px; margin-bottom: 10px; color:black; font-family: sans-serif">Enhancement Project</h4>-->
 		<h4 style = "text-align:center; font-size:23px; margin-top: 15px; color:black; font-family: sans-serif">Food Ingredients</h4>
 	</div>
 		<div id="tooltip" class="hidden">
@@ -56,8 +56,9 @@
 		<div1 style = "color:black; background-color:#f5f6f7">
 			<div1>
 				<!--<p style = "text-align:center; font-size: 30px; padding-top: 20px; font-family: sans-serif">Created by: <strong>Mingun Cho</strong></p>-->
-	  	  		<p style = "text-align:center; font-size: 20px; font-family: sans-serif">Designed and Created by Mingun Cho in collaboration with Suresh Lodha</strong></p>
-			</div1>
+	  	  		<p style = "text-align:center; font-size: 20px; font-family: sans-serif">Designed and Created by Mingun Cho in collaboration with Suresh Lodha</p>
+				 <p style = "text-align:center; font-size:15px; font-family: sans-serif"><a href="https://github.com/MangoShip/CSE163-Enhancement/"> Github Link</a></p>	    		
+	    		</div1>
 		</div1>
 		<div class = "row" style = "padding-bottom: 50px">
 			<!--<div class = "column" style = "text-align: center">
@@ -90,9 +91,7 @@
 					<a href="https://fdc.nal.usda.gov/"> U.S. Department of Agriculture</a>
 				</p>
 			</div>
-			<div style = "text-align:center; font-size:15px">
-				<a href="https://github.com/MangoShip/CSE163-Enhancement/"> Github Link</a>
-			</div>
+			
 		</div>
   </body>
 </html>
