--- a/projects/lindsey/index.html
+++ b/projects/lindsey/index.html
@@ -54,10 +54,10 @@ https://github.com/d3/d3-force/blob/master/README.md#simulation_stop
 		<h2 style="color: black" id="h2">
 			<b>Created by:</b> Gabrella Lindsey in collaboration with Suresh Lodha
 
-			<br>
+			<!--<br>
 			<br>
 
-			UCSC CSE163, Spring 2020
+			UCSC CSE163, Spring 2020-->
 
 			<br>
 			<br>
