--- a/projects/prithviraj/index.html
+++ b/projects/prithviraj/index.html
@@ -82,7 +82,7 @@
 
     <!-- Data sources, Name -->
     <h4 style = "text-align:center">Enhanced by Namratha Prithviraj<br>In collaboration with: Suresh Lodha</h4>
-    <h4 style = "text-align:center">Spring 2020</h4>
+    <!--<h4 style = "text-align:center">Spring 2020</h4>-->
       
     <h4 style = "text-align:center">This project has been adapted and enhanced from a previous version</h4>
     <h4 style = "text-align:center;"><a href="https://sureshlodha.github.io/CMPS165_Spring2018/FinalProjects/UrbanSprawl/index.html">Original Visualization</a></h4>  
