--- a/projects/sun/index.html
+++ b/projects/sun/index.html
@@ -91,12 +91,12 @@
             </p>
         </div><br>
         <div class="columns">
-            <div class="column is-3">
+            <!--<div class="column is-3">
                 <div>
                     <strong>Date</strong> <br>
                     Spring 2020
                 </div>
-            </div>
+            </div>-->
             <div class="column is-3">
                 <div>
                     <strong>Files</strong>
