--- a/projects/nguyen/index.html
+++ b/projects/nguyen/index.html
@@ -50,10 +50,12 @@
 <br>
       
     <div style="font-size:16px"class="end">
-        <p style="font-size: 20px">Added Extra Functionality:</p> Minh Anh Nguyen in collaboration with Suresh Lodha for CMPS 163: Data Programming for Visualization, Spring 2020.
+        <p style="font-size: 20px">Added Extra Functionality:</p> Minh Anh Nguyen in collaboration with Suresh Lodha 
+        <!--for CMPS 163: Data Programming for Visualization, Spring 2020.-->
         <p style="font-size: 18px">Github Link: <a href="https://minhanhn98.github.io/class%20enhancement/"> here</a></p>
-        <p style="font-size: 20px">Created by:</p> Parvin Dadgar - Faeze Brahman - Wen Cui for CMPS 263: Data Driven Discovery Visualization, Winter 2018.
-        <p style="font-size: 18px">Email Address: </p><a href="mailto:pdadgar@ucsc.edu">pdadgar@ucsc.edu</a> <a href="mailto:fbrahman@ucsc.edu">fbrahman@ucsc.edu</a> <a href="mailto:wcui7@ucsc.edu">wcui7@ucsc.edu</a> 
+        <p style="font-size: 20px">Originally Created by Parvin Dadgar, Faeze Brahman, and Wen Cui in collaboration with Suresh K. Lodha </p>
+        <!--for CMPS 263: Data Driven Discovery Visualization, Winter 2018.-->
+        <!--<p style="font-size: 18px">Email Address: </p><a href="mailto:pdadgar@ucsc.edu">pdadgar@ucsc.edu</a> <a href="mailto:fbrahman@ucsc.edu">fbrahman@ucsc.edu</a> <a href="mailto:wcui7@ucsc.edu">wcui7@ucsc.edu</a>-->
         <p style="font-size: 18px">Github Link: <a href="https://parvinDaD.github.io/D3-visualization/"> here</a></p>        
         </div>  
     <div class="info">  
